--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@ purple - #7360DF
 darker purple - #33186B
 
 */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color:  #33186B;
+
+  display: flex;
+  justify-content: center;
+}
+
+#ttl {
+  margin: 200px;
+  color: #C499F3;
+}
